--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/vendors/fontawesome-free-6.3.0-web/css/all.min.css">
-  <title>Beetles Cars Seller</title>
+  <title>Beetles Cars Fan</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
         </nav>
   </header>
   <main>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleAutoplaying" class="carousel slide container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/imports/vroom_vroom.jpg" class="d-block w-100" alt="...">
@@ -74,27 +74,113 @@
         </div>
       </div>
     </div>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleAutoplaying" class="carousel slide container" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="assets/imports/Photo_big_Volkswagen_Coccinelle-_1970_6760_2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="assets/imports/S0-Detroit-2014-VW-Coccinelle-Dune-Concept-rebelote-310619.jpg" class="d-block w-100" alt="...">
+          <img src="assets/imports/S0-Detroit-2014-VW-Coccinelle-Dune-Concept-rebelote-310619.jpg" class="d-block w-100"
+            alt="...">
         </div>
         <div class="carousel-item">
-          <img src="assets/imports/voitureMontagne.jpg" class="d-block w-100"
-            alt="...">
+          <img src="assets/imports/voitureMontagne.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
   </main>
   <aside>
-
+    <h2>History of the Beetles car</h2>
+    <p>Concept in 1940 in Germany by <strong>Volkswagen</strong>, this was one of the less cheeper car so it was really
+      accessible.</p>
   </aside>
-
-  <footer>
-
+  <footer class="text-center text-lg-start bg-light text-muted">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+      <div class="me-5 d-none d-lg-block">
+        <span>Get connected with us on social networks:</span>
+      </div>
+      <div>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://polobrn.github.io/portfolio/" class="me-4 text-reset">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="" class="me-4 text-reset">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/paul-br%C3%A9on-b7a083257/" class="me-4 text-reset">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/PoloBrn/" class="me-4 text-reset">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </section>
+    <section>
+      <div class="container text-center text-md-start mt-5">
+        <div class="row mt-3">
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-car"></i>   Beetles Cars Fan
+            </h6>
+            <p>
+              Here you can use rows and columns to organize your footer content. Lorem ipsum
+              dolor sit amet, consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              Products
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Angular</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">React</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Vue</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Laravel</a>
+            </p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Pricing</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Settings</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Orders</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Help</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <p><i class="fas fa-home me-3"></i> 34 Rue Saint Maur, 76 000 Rouen, France</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              paul.breon@viacesi.fr
+            </p>
+            <p><i class="fas fa-phone me-3"></i> +33 7 78 32 07 54</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2023 Copyright : Paul Bréon
+    </div>
   </footer>
   <script src="assets/vendors/bootstrap/js/bootstrap.bundle.js"></script>
   <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
