Creation of page mecanic and design and optimisation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/vendors/fontawesome-free-6.3.0-web/css/all.min.css">
-  <title>Beetles Cars Fan</title>
+  <title>Beetles Cars Home</title>
 </head>
 
 <body>
@@ -28,27 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li>
-                      <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+                  <a class="nav-link" href="mecanic.html">Mecanic</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
+                  <a class="nav-link" href="design.html">Design</a>
                 </li>
               </ul>
               <form class="d-flex" role="search">
@@ -89,10 +75,14 @@
       </div>
     </div>
   </main>
-  <aside>
+  <aside class="History">
     <h2>History of the Beetles car</h2>
     <p>Concept in 1938 in Germany by <strong>Volkswagen</strong>, this was one of the less cheeper car so it was really
       accessible.</p>
+  </aside>
+  <aside class="Design">
+    <h2>Design</h2>
+    <p></p>
   </aside>
   <footer class="text-center text-lg-start bg-light text-muted">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -125,7 +115,7 @@
         <div class="row mt-3">
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-car"></i>   Beetles Cars Fan
+              <i class="fas fa-car"></i> Beetles Cars Fan
             </h6>
             <p>
               Here you can use rows and columns to organize your footer content. Lorem ipsum
